--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
         branches-ignore:
             - 'dependabot/**'
     pull_request: ~
+    pull_request_target: ~
     release:
         types: [created]
     schedule:
