--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,9 @@
         }
     ],
     "require": {
-        "shopware/core": "6.4.*",
-        "ext-json": "*"
-    }
-    ,
+        "shopware/core": "6.4.*"
+    },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "psalm/plugin-symfony": "^3.1",
         "sylius-labs/coding-standard": "^4.1",
         "phpunit/phpunit": "^9.5"
