--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,7 @@ on:
     push:
         branches-ignore:
             - 'dependabot/**'
-    pull_request: ~
-    pull_request_target: ~
+    pull_request:
     release:
         types: [created]
     schedule:
