--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "shopware/core": "6.4.*"
+        "shopware/platform": "6.4.*"
     },
     "require-dev": {
         "psalm/plugin-symfony": "^3.1",
-        "sylius-labs/coding-standard": "^4.1",
+        "bitbag/coding-standard": "^1.0",
         "phpunit/phpunit": "^9.5"
     },
     "extra": {
@@ -42,7 +42,8 @@
     },
     "config": {
         "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
         }
     }
 }
