--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bitbag/shopware-inpost-plugin",
     "description": "InPost integration for Shopware",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "type": "shopware-platform-plugin",
     "license": "MIT",
     "authors": [
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "shopware/platform": "6.4.*"
+        "shopware/core": "6.4.*"
     },
     "require-dev": {
         "psalm/plugin-symfony": "^3.1",
