--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "shopware/core": "6.4.*",
-        "shopware/storefront": "6.4.*"
+        "shopware/core": "6.5.*",
+        "shopware/storefront": "6.5.*"
     },
     "require-dev": {
         "psalm/plugin-symfony": "^3.1",
@@ -44,7 +44,8 @@
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "symfony/runtime": true
         }
     }
 }
